# src/app.ts
@@ -1,6 +1,7 @@
 import express from 'express';
 import swaggerUi from 'swagger-ui-express';
 import fs from 'fs';
+import db from './db.js';
 import { deleteTask, getTask, getTaskWithID, postTask, updateTask} from './controllers/task.controller.js';
 
 let task = [
@@ -40,10 +41,21 @@ app.put('/tasks/:id', updateTask);
 app.delete('/tasks/:id', deleteTask);
 
 app.get('/stats', (req, res) => {
-  const totalTasks = task.length;
-  const doneTasks = task.filter((e) => e.done).length;
-  const openTasks = totalTasks - doneTasks;
-  res.status(200).json({ total: totalTasks, done: doneTasks, open: openTasks });
+  try {
+    const getTotal = db.prepare("SELECT COUNT(*) FROM tasks").get()
+    const getDone = db.prepare("SELECT COUNT(*) FROM tasks WHERE done = ?").get(1)
+    const total = Object.values(getTotal as { "COUNT(*)": number })[0]
+    const done = Object.values(getDone as { "COUNT(*)": number })[0]
+    res.status(200).json({
+      total: total,
+      done: done,
+      open: total! - done!
+    });
+    return;
+  } catch (e) {
+    res.status(500);
+    return;
+  }
 });
 
 app.listen(3000, () => {  console.log("Hello World, Server is at 3000");});
